testsuite/tests/properties/invalid_prop_def/reserved/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun prop(node: Int, lex_env: Int): Int = node + lex_env
}
